created css and some style to continue work on it

--- a/alkhanishvili.html
+++ b/alkhanishvili.html
@@ -3,13 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>alkhanishvili</title>
-<link rel="stylesheet" type="text/css" href="">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header>
-		<div id="logo"></div>
-		<div id-"headcontact"></div>
-	</header>
 	<nav>
 		<ul>
 			<li>main</li>
@@ -19,13 +16,33 @@
 			<li>contact</li>
 		</ul>	
 	</nav>
+		<div id="logo"></div>
+		<div id-"headcontact"></div>
+	</header>
+
 	<section>
 		<div id="uaccount"></div>
 		<div id="adcompany"></div>
+		<h2>სიახლეები | ყველა სიახლე</h2>
 		<article>
-			<h2>siaxleebi</h2>
-			<div id="news"></div>
+			<div id="news">image and text</div>
+		</article>
+		<article>
+			<div id="news">image and text</div>
+		</article>
+		<article>
+			<div id="news">image and text</div>
+		</article>
+		<article>
+			<div id="news">image and text</div>
 		</article>	
+		<h2>ვიდეოები | ყველა ვიდეო</h2>
+		<article>
+			<div id="news">image and text</div>
+		</article>
+		<article>
+			<div id="news">image and text</div>
+		</article>
 	</section>	
 	<footer>
 		<nav>
